tests/rosetta/out/Java/arithmetic-integer-2.java
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
// arithmetic-integer-2.mochi
public class ArithmeticInteger2 {
    static void main() {
        int a = 12345678;
        int b = 98765;
        System.out.println(String.valueOf(a) + " + " + String.valueOf(b) + " = " + String.valueOf(a + b));
        System.out.println(String.valueOf(a) + " - " + String.valueOf(b) + " = " + String.valueOf(a - b));
        System.out.println(String.valueOf(a) + " * " + String.valueOf(b) + " = " + String.valueOf(a * b));
        System.out.println(String.valueOf(a) + " quo " + String.valueOf(b) + " = " + String.valueOf(Integer.parseInt((a / b))));
        System.out.println(String.valueOf(a) + " rem " + String.valueOf(b) + " = " + String.valueOf(a % b));
    }
    public static void main(String[] args) {
        main();
    }
}
